<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/background" 
>
		<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
		    android:layout_width="fill_parent"
		    android:orientation="vertical" android:weightSum="1" android:background="@color/background"  android:isScrollContainer="true" android:scrollbars="vertical" android:layout_height="484dp" android:id="@+id/optionsSounds">
		    <TextView android:layout_width="wrap_content" android:id="@+id/optionsHeader" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:text="@string/optionsHeader"></TextView>
		    <TextView android:id="@+id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/optionsServerIP"></TextView>
		    <EditText android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/optionsServerIPET">
		        <requestFocus></requestFocus>
		    </EditText>
		    <CheckBox android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/optionsVibrations" android:text="@string/optionsVibrations"></CheckBox>
		    <LinearLayout android:id="@+id/linearLayout1" android:layout_width="wrap_content" android:layout_height="wrap_content">
		        <CheckBox android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/optionsSound" android:text="@string/optionsSounds"></CheckBox>
		    </LinearLayout>
		    <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/optionsSave" android:text="@string/optionsSave" android:onClick="@string/onOptionsSaveClickHandler"></Button>
	</TableLayout>
</ScrollView>